[tool.poetry]
name = "pyinstallertest"
version = "0.1.0"
package-mode = false
authors = ["TakatoNakamura <pptaka10gg@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.12,<3.14"
kivy = {extras = ["base"], version = "^2.3.0"}
kivy-examples = "^2.3.0"
cython = "3.0.0"
nuitka = "^2.4.8"
zstandard = "^0.23.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120
lint.select = ["E", "E225", "F", "W", "B", "I"]
lint.preview = true

